syntax = "proto3";

package rarticle;

option go_package = "rarticlepb";

service RArticle {
    rpc getRArticle(RArticleRequest) returns (RArticleResponse) {};
    rpc searchRArticle(SearchRequest) returns (stream SearchResponse) {};
}

message RArticleRequest {
    string name = 1;
    string lang = 2;
}

message RArticleResponse {
    string content = 1;
}

message SearchRequest {
    string word = 1;
    string lang = 2;
}

message SearchResponse {
    string link = 1;
}
